Fixed username misalignment in holderlist

--- a/src/app/feed/post/holder/holder.component.css
+++ b/src/app/feed/post/holder/holder.component.css
@@ -47,6 +47,7 @@
   transform: translate(-50%, -50%);
   object-fit: cover;
   border-radius: 50%;
+  box-shadow: inset 0 0 0 1px rgba(15, 28, 63, 0.25);
 }
 
 .holderDetails {
@@ -81,6 +82,7 @@
   position: absolute;
   top: 0%;
   letter-spacing: 0.15em;
+  line-height: 2.5vh;
 
 }
 
@@ -181,7 +183,7 @@
 }
 
 .usernameSpace {
-  font-size: 2vh;
+  font-size: 1.7vh;
 }
 
 .stickerHolder {
@@ -230,7 +232,12 @@
 
 }
 
+@media screen and (max-width: 374px) {
 
+  .usernameSpace {
+    padding-left: 2%;
+  }
+}
 
 
 
